Small size padding fix
Finally found what was causing the extra padding to show up when window
size was less than 768px. Removing the one body subsection in the
bootstrap media queries fixes the problem.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5312,10 +5312,6 @@ button.close {
   }
 }
 @media (max-width: 767px) {
-  body {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
   .navbar-fixed-top,
   .navbar-fixed-bottom,
   .navbar-static-top {
